changed swag
